kustomize/overlay/production/end-user-ui/sa-deployments.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: end-user-ui

spec:
  replicas: 2

  minReadySeconds: 30

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    spec:
      serviceAccountName: forgerock-sa

      terminationGracePeriodSeconds: 30

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: end-user-ui
                topologyKey: kubernetes.io/hostname

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: end-user-ui

      containers:
        - name: end-user-ui

          resources:
            requests:
              cpu: 250m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
