kustomize/overlay/production/end-user-ui/remove-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: end-user-ui
